fix title alignment wip

--- a/modules/nested-tabs/assets/scss/frontend.scss
+++ b/modules/nested-tabs/assets/scss/frontend.scss
@@ -38,6 +38,8 @@
 	--n-tabs-title-height: initial;
 	--n-tabs-title-font-size: 1rem;
 
+	--n-tabs-title-justify-content-toggle: initial;
+	--n-tabs-title-align-items-toggle: center;
 	--n-tabs-title-justify-content: center;
 	--n-tabs-title-align-items: center;
 	--n-tabs-title-direction: row;
@@ -84,9 +86,9 @@
 
 		&-title {
 			display: flex;
-			align-items: var( --n-tabs-title-align-items );
 			flex-direction: var( --n-tabs-title-direction );
-			justify-content: var( --n-tabs-title-justify-content );
+			align-items: var( --n-tabs-title-align-items-toggle, var( --n-tabs-title-align-items ) );
+			justify-content: var( --n-tabs-title-justify-content-toggle, var( --n-tabs-title-justify-content ) );
 			gap: var( --n-tabs-icon-gap );
 			color: var( --n-tabs-title-color );
 			background-color: var( --n-tabs-title-background-color );
@@ -129,7 +131,9 @@
 			}
 
 			.e-n-tab-icon {
+				display: flex;
 				align-items: center;
+				order: var( --n-tabs-icon-order );
 
 				> i {
 					color: var( --n-tabs-icon-color );
